@@ -2,6 +2,7 @@
 v2.0
 ----
 
+[jan] Fix application-specific permission checks (Bug #9786).
 [jan] Correctly escape vacation subjects with quote characters in Maildrop
       driver (Bug #9156).
 [jan] Catch all PEAR errors in Sieve driver.
